<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.NetworkActivity">

    <TextView
        android:id="@+id/txt_no_internet_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_regular"
        android:text="@string/no_connection_found"
        android:textAllCaps="false"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_no_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_15sdp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/no_internet"
        android:textAllCaps="false"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@+id/txt_no_internet_msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/ok_green_button"
        android:fontFamily="@font/open_sans_bold"
        android:paddingStart="@dimen/_14ssp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_13sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/try_again"
        android:textAllCaps="true"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_no_internet_msg" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        app:layout_constraintBottom_toTopOf="@+id/txt_no_internet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/_15sdp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/no_internet_animation"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>