<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.OrderPlacedActivity">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_confetti_anim"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:lottie_autoPlay="false"
            app:lottie_loop="false"
            tools:ignore="MissingConstraints" />
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="0dp"
            android:layout_height="@dimen/_220sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            app:lottie_repeatCount="0"
            app:lottie_rawRes="@raw/order_placed_animation"
            tools:ignore="MissingConstraints" />


        <ImageView
            android:id="@+id/img_basket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="@+id/animationView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/animationView"
            app:layout_constraintVertical_bias="1.03"
            app:srcCompat="@drawable/ic_basket"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_success_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/russo_one"
            android:gravity="center"
            android:text="@string/success"
            android:textColor="@color/teal_700"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/lottie_confetti_anim"
            app:layout_constraintTop_toBottomOf="@+id/img_basket" />

        <TextView
            android:id="@+id/tv_success_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:fontFamily="@font/open_sans_regular"
            android:text="@string/your_order_has_been_placed"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_success_title" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_view_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/teal_button_bg"
            android:fontFamily="@font/russo_one"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:text="@string/view_orders"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_success_msg" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_continue_shopping"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/teal_button_border_bg"
            android:fontFamily="@font/russo_one"

            android:text="@string/continue_shopping"
            android:textColor="@color/teal_700"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="@+id/btn_view_order"
            app:layout_constraintStart_toStartOf="@+id/btn_view_order"
            app:layout_constraintTop_toBottomOf="@+id/btn_view_order" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>